# echo

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  design.md  echo.yaml  pyproject.toml  pytest.ini  questions.md  tasks.md
app/: __init__.py
app/common/: __init__.py
app/common/models/: echo.py  echo_event.py  spec.py  spec_event.py  watcher.py
app/common/utils/: loader.py
app/control_plane/: __init__.py  controller.py
app/control_plane/events/: client.py  emitter.py  loader.py
app/control_plane/watcher/: manager.py
app/worker/: __init__.py  spec_worker.py
tests/: test_project_structure.py
tests/fixtures/: __init__.py
tests/unit/common/: __init__.py
tests/unit/control_plane/: __init__.py
tests/unit/worker/: __init__.py
